Refactor - based on the analysis of SonarLint.